# antigravity-defense-suite

./: .env.example  .gitignore  EXAMPLE_PATTERNS.md  README.md  ag_wrapper.py  canary_guard.py  fight_club.py  final_boss_test.py  install.ps1  install.py  security_gate.py
antigravity_guard/: Cargo.toml  pyproject.toml
antigravity_guard/src/: lib.rs
injection_scanner/: Cargo.toml
injection_scanner/src/: engine.rs  main.rs
