[package]
name = "injection_scanner"
version = "0.1.0"
edition = "2021"
authors = ["Antigravity"]

[dependencies]
regex = "1.10"
base64 = "0.22"
hex = "0.4"
unicode-normalization = "0.1"
urlencoding = "2.1"
html-escape = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
